[project]
name = "streamlit-the-good-way"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "dimanu-py", email = "diegomtz126@gmail.com"},
]
dependencies = [
    "streamlit>=1.39.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
